@startuml Model

rectangle {
    entity dances {
        **id** : bigint
        --
        **short_name** : text
        **name** : text
    }
}

rectangle {
    entity referees {
        **id** : bigint
        --
        **fullname** : text
    }
}

rectangle {
    entity tournaments {
        **id** : bigint
        --
        **user_id** : bigint
        --
        **name** : text
        **date** : timestamp
        **state** : text
    }

    entity categories {
        **id** : bigint
        --
        **tournament_id** : bigint
        --
        **name** : text
    }

    entity couples {
        **id** : bigint
        --
        **tournament_id** : bigint
        --
        **male_partner_fullname** : text
        **female_partner_fullname** : text
    }

    entity rounds {
        **id** : bigint
        --
        **category_id** : bigint
        --
        **order_number** : int
    }

    entity round_results {
        **id** : bigint
        --
        **round_id** : bigint
        **couple_id** : bigint
        **dance_id** : bigint
        **referee_id** : bigint
        --
        **score** : int
    }

    entity category_results {
        **id** : bigint
        --
        **category_id** : bigint
        **couple_id** : bigint
        --
        **place** : int
    }

    entity cotegories_couples {
        **id** : bigint
        --
        **category_id** : biging
        **couple_id** : bigint
    }

    entity rounds_couples {
        **id** : bigint
        --
        **round_id** : biging
        **couple_id** : bigint
    }
}

entity categories_dances {
    **id** : bigint
    --
    **category_id** : biging
    **dance_id** : bigint
}

entity categories_referees {
    **id** : bigint
    --
    **category_id** : biging
    **referee_id** : bigint
}

tournaments }o--|| categories

tournaments }o--|| couples

categories }o--|| categories_dances
categories_dances ||--o{ dances 

categories }o--|| categories_referees
categories_referees ||--o{ referees

categories }o--|| rounds

categories }o--|| cotegories_couples
cotegories_couples ||--o{ couples

rounds }o--|| rounds_couples
rounds_couples ||--o{ couples

round_results ||--o{ rounds
round_results ||--o{ couples
round_results ||--o{ dances
round_results ||--o{ referees

category_results ||--o{ categories
category_results ||--o{ couples

@enduml